[gd_scene load_steps=16 format=3 uid="uid://dr3tumk6xge2"]

[ext_resource type="Script" path="res://addons/g_vec/scene/resources/g_vec_path_svg.gd" id="2_tqle2"]
[ext_resource type="Script" path="res://addons/g_vec/scene/resources/svg_segment/g_vec_segment_cubic.gd" id="2_wodtg"]
[ext_resource type="Script" path="res://addons/g_vec/scene/nodes/g_vec_editor_point.gd" id="3_2bmwv"]
[ext_resource type="Script" path="res://addons/g_vec/scene/nodes/g_vec_sdf/g_vec_sdf_circle.gd" id="5_2l011"]
[ext_resource type="Script" path="res://addons/g_vec/scene/nodes/g_vec_editor_svg.gd" id="6_qnf37"]
[ext_resource type="Script" path="res://addons/g_vec/scene/nodes/g_vec_bone_weight.gd" id="7_d7um5"]
[ext_resource type="Script" path="res://addons/g_vec/scene/nodes/g_vec_skeleton_path.gd" id="7_khx18"]
[ext_resource type="Script" path="res://addons/g_vec/scene/resources/g_vec_path_writable.gd" id="8_1d8q5"]
[ext_resource type="Script" path="res://addons/g_vec/scene/nodes/g_vec_path_to_points.gd" id="9_b7u8r"]
[ext_resource type="Script" path="res://addons/g_vec/scene/resources/g_vec_path_range.gd" id="10_g0766"]

[sub_resource type="Resource" id="Resource_m7eqj"]
script = ExtResource("2_wodtg")
start_control_point = Vector2(133, -12.9999)
end_control_point = Vector2(206.957, 122.883)
start_point = Vector2(4, 64)
end_point = Vector2(245, 227)
bake_interval = 50.0

[sub_resource type="Resource" id="Resource_3kukp"]
script = ExtResource("2_wodtg")
start_control_point = Vector2(283.043, 331.117)
end_control_point = Vector2(551.381, -45.1971)
start_point = Vector2(245, 227)
end_point = Vector2(582, 50)
bake_interval = 50.0

[sub_resource type="Resource" id="Resource_jyg8p"]
script = ExtResource("2_tqle2")
_segments = Array[Resource("res://addons/g_vec/scene/resources/svg_segment/g_vec_segment.gd")]([SubResource("Resource_m7eqj"), SubResource("Resource_3kukp")])
caching_enabled = true

[sub_resource type="Resource" id="Resource_t3vwo"]
script = ExtResource("8_1d8q5")
segments = Array[PackedVector2Array]([PackedVector2Array(4, 64, 49.8322, 44.6261, 90.7282, 42.3429, 126.912, 54.2835, 158.609, 77.581, 186.042, 109.368, 209.435, 146.779, 229.013, 186.945, 245, 227), PackedVector2Array(245, 227, 269.147, 245.383, 309.4, 229.881, 333.852, 212.91, 360.274, 191.65, 387.98, 167.497, 416.284, 141.845, 444.502, 116.089, 471.946, 91.6221, 497.933, 69.8399, 521.776, 52.1365, 560.289, 34.5439, 582, 50)])
caching_enabled = false

[sub_resource type="Resource" id="Resource_m1gd4"]
script = ExtResource("10_g0766")
range_mode = 0
start = 0.0
end = 1.0
path = SubResource("Resource_t3vwo")
caching_enabled = true
metadata/_svg_tools_path_property = "path"

[node name="test" type="Node2D"]

[node name="GVecEditorSVG" type="Node2D" parent="."]
script = ExtResource("6_qnf37")
display = true
path = SubResource("Resource_jyg8p")

[node name="Start" type="Node2D" parent="GVecEditorSVG"]
position = Vector2(4, 64)
rotation = -0.42954
script = ExtResource("3_2bmwv")
property_name = "start_point"

[node name="HandleOut" type="Node2D" parent="GVecEditorSVG/Start"]
position = Vector2(149.348, -16.2827)
script = ExtResource("3_2bmwv")
property_name = "start_control_point"

[node name="End0" type="Node2D" parent="GVecEditorSVG"]
position = Vector2(245, 227)
rotation = 1.22048
script = ExtResource("3_2bmwv")
property_name = "end_point"

[node name="HandleIn" type="Node2D" parent="GVecEditorSVG/End0"]
position = Vector2(-110.85, 0)
script = ExtResource("3_2bmwv")
property_name = "end_control_point"

[node name="HandleOut" type="Node2D" parent="GVecEditorSVG/End0"]
position = Vector2(110.85, 0)
script = ExtResource("3_2bmwv")
segment_index = 1
property_name = "start_control_point"

[node name="End1" type="Node2D" parent="GVecEditorSVG"]
position = Vector2(582, 50)
rotation = 1.25961
script = ExtResource("3_2bmwv")
segment_index = 1
property_name = "end_point"

[node name="HandleIn" type="Node2D" parent="GVecEditorSVG/End1"]
position = Vector2(-100, 0)
script = ExtResource("3_2bmwv")
segment_index = 1
property_name = "end_control_point"

[node name="GVecSkeletonWeights" type="Node2D" parent="." node_paths=PackedStringArray("skeleton")]
script = ExtResource("7_khx18")
skeleton = NodePath("../Skeleton2D")
path_in = SubResource("Resource_jyg8p")
path_out = SubResource("Resource_t3vwo")
weight_bone_indices = PackedInt32Array(1, 2, 3)
weights = Array[Array]([[PackedFloat32Array(1, 1, 1, 0.928816, 0.595785, 0.23055, 0, 0, 0), PackedFloat32Array(0, 0, 0, 0.0711844, 0.404215, 0.76945, 1, 1, 1), PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0)], [PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0), PackedFloat32Array(1, 1, 1, 1, 0.862757, 0.54794, 0.2343, 0, 0, 0, 0, 0, 0), PackedFloat32Array(0, 0, 0, 0, 0.137243, 0.45206, 0.7657, 1, 1, 1, 1, 1, 1)]])

[node name="GVecBoneWeight" type="Node2D" parent="GVecSkeletonWeights"]
position = Vector2(25, 31)
script = ExtResource("7_d7um5")
bone_index = 1

[node name="Inner" type="Node2D" parent="GVecSkeletonWeights/GVecBoneWeight"]
position = Vector2(26, 18)
rotation = -0.188147
scale = Vector2(0.749012, 0.293622)
script = ExtResource("5_2l011")
editor_debug_preview = true
editor_debug_color = Color(0.984314, 0, 0.32549, 1)

[node name="Outer" type="Node2D" parent="GVecSkeletonWeights/GVecBoneWeight"]
position = Vector2(88.954, 26.5676)
rotation = 0.0318781
scale = Vector2(0.642375, 0.466976)
script = ExtResource("5_2l011")
editor_debug_preview = true
editor_debug_color = Color(0, 0.635294, 0.396078, 1)
radius = 219.04

[node name="GVecBoneWeight2" type="Node2D" parent="GVecSkeletonWeights"]
position = Vector2(248, 228)
script = ExtResource("7_d7um5")
bone_index = 2

[node name="Inner" type="Node2D" parent="GVecSkeletonWeights/GVecBoneWeight2"]
position = Vector2(-2.99999, 2)
rotation = -0.188147
script = ExtResource("5_2l011")
editor_debug_preview = true
editor_debug_color = Color(0.984314, 0, 0.32549, 1)

[node name="Outer" type="Node2D" parent="GVecSkeletonWeights/GVecBoneWeight2"]
position = Vector2(-1.99997, 0)
rotation = 0.0318781
script = ExtResource("5_2l011")
editor_debug_preview = true
editor_debug_color = Color(0, 0.635294, 0.396078, 1)
radius = 219.04

[node name="GVecBoneWeight3" type="Node2D" parent="GVecSkeletonWeights"]
position = Vector2(530, 76)
script = ExtResource("7_d7um5")
bone_index = 3

[node name="Inner" type="Node2D" parent="GVecSkeletonWeights/GVecBoneWeight3"]
position = Vector2(-2.99999, 2)
rotation = -0.188147
script = ExtResource("5_2l011")
editor_debug_preview = true
editor_debug_color = Color(0.984314, 0, 0.32549, 1)

[node name="Outer" type="Node2D" parent="GVecSkeletonWeights/GVecBoneWeight3"]
position = Vector2(-1.99997, 0)
rotation = 0.0318781
script = ExtResource("5_2l011")
editor_debug_preview = true
editor_debug_color = Color(0, 0.635294, 0.396078, 1)
radius = 219.04

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[node name="Root" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="Bone2D" type="Bone2D" parent="Skeleton2D/Root"]
position = Vector2(4, 65)
rotation = -0.548893
scale = Vector2(1, 1)
rest = Transform2D(0.853103, -0.521743, 0.521743, 0.853103, 4, 65)

[node name="Bone2D2" type="Bone2D" parent="Skeleton2D/Root/Bone2D"]
position = Vector2(123.635, 265.508)
rotation = 1.78381
scale = Vector2(1, 1)
rest = Transform2D(-0.211406, 0.977398, -0.977398, -0.211406, 123.635, 265.508)

[node name="Bone2D" type="Bone2D" parent="Skeleton2D/Root/Bone2D/Bone2D2"]
position = Vector2(-57.9675, -374.005)
rest = Transform2D(1, 0, 0, 1, -57.9675, -374.005)

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(4, 64, 49.8322, 44.6261, 90.7282, 42.3429, 126.912, 54.2835, 158.609, 77.581, 186.042, 109.368, 209.435, 146.779, 229.013, 186.945, 245, 227, 269.147, 245.383, 309.4, 229.881, 333.852, 212.91, 360.274, 191.65, 387.98, 167.497, 416.284, 141.845, 444.502, 116.089, 471.946, 91.6221, 497.933, 69.8399, 521.776, 52.1365, 560.289, 34.5439, 582, 50)

[node name="GVecPathToPoints" type="Node" parent="Line2D"]
script = ExtResource("9_b7u8r")
path = SubResource("Resource_m1gd4")
target_property = "AUTO"
metadata/_svg_tools_path_property = "path"
